removed unnecessary constants